# Microfone_DMA

./: CMakeLists.txt  README.md  i2s_mic.pio  valid_mic.c
lib/FatFs_SPI/sd_driver/: hw_config.c
